--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ body {
 .bubble {
   background-color: #ff4f6d;
   color: white;
-  font-family: 'Great Vibes', cursive;
+  font-family: 'Parisienne', cursive;
   font-size: 32px;
   font-weight: bold;
   text-align: center;
